--- a/templates/backoffice_base.html
+++ b/templates/backoffice_base.html
@@ -3,6 +3,7 @@
 <head>
     <title>{% block title %}Base Template{% endblock %}</title>
     <link rel='stylesheet' href="/media/css/backoffice_main.css" type="text/css">
+    <link rel='stylesheet' href="/media/css/menu.css" type="text/css">
 </head>
 <body>
 <div id="container">
@@ -32,6 +33,46 @@
         {% if clerk %}
         <div><a href='/backoffice/packing' class='menubox'>Packing Management</a></div>
         {% endif %}
+            <div id="wrapper">
+                <ul class="ac-menu">
+                    <li id="one">
+                        <a href="#one">Menu One</a>
+                        <ul class="sub-menu">
+                            <li><a href="#one">Inner One</a></li>
+                            <li><a href="#one">Inner Two</a></li>
+                            <li><a href="#one">Inner Three</a></li>
+                            <li><a href="#one">Inner Three</a></li>
+                            <li><a href="#one">Inner Three</a></li>
+                        </ul>
+                    </li>
+                    <li id="two">
+                        <a href="#two">Menu Two</a>
+                        <ul class="sub-menu">
+                            <li><a href="#one">Inner One</a></li>
+                            <li><a href="#one">Inner Two</a></li>
+                            <li><a href="#one">Inner Three</a></li>
+                        </ul>
+                    </li>
+                    <li id="three">
+                        <a href="#three">Menu Three</a>
+                        <ul class="sub-menu">
+                            <li><a href="#three">Inner One</a></li>
+                            <li><a href="#three">Inner Two</a></li>
+                            <li><a href="#three">Inner Three</a></li>
+                        </ul>
+                    </li>
+                    <li id="four">
+                        <a href="#four">Menu Four</a>
+                        <ul class="sub-menu">
+                            <li><a href="#three">Inner One</a></li>
+                            <li><a href="#three">Inner Two</a></li>
+                            <li><a href="#three">Inner Three</a></li>
+                        </ul>
+                    </li>
+                </ul>
+            </div><!--end accordian-->
+            </div><!--end wrapper-->
+
         {% endblock %}
     </div>
     <div id="content">
