--- a/media/css/main.css
+++ b/media/css/main.css
@@ -26,6 +26,10 @@
 //  background-color:lightgray;
 }
 
+
+body{
+    font-family: "Trebuchet MS";
+}
 #header{
     margin-top:10px;
     left:15px;
