Update UI - Arm Add Ja, Already to merge branch

--- a/media/css/main.css
+++ b/media/css/main.css
@@ -118,7 +118,6 @@
 .show_table td{
     text-align:center;
     min-width:90px;
-    background-color:#000099;
 }
 
 .show_table {
@@ -129,6 +128,7 @@
 .table_header{
     background-color:black;
     color:white;
+    background-color:#000099;
 }
 
 .float_left{
@@ -152,10 +152,10 @@
 #oldcard,#oldaddress{
     background-color:white;
     text-align:center;
-    vertical-align:bottom;
+    vertical-align:middle;
     margin-left: 200px;
     margin-top:-20px;
-    height:50px;
+    height:30px;
     width:100px;
     border:0px;
     padding-top:5px;
@@ -186,6 +186,11 @@
 
 #payment_submit {
     margin-left:120px;
+}
+
+.show_table_oreder_detail td{
+    min-width: 70px;
+    text-align: right;
 }
 
 a.menubox:link,a.menubox:visited
