--- a/templates/view_cart.html
+++ b/templates/view_cart.html
@@ -8,6 +8,10 @@
 </span>
 <br>
 <br>
+<span class="biggest_header">
+    Cart
+</span>
+<br>
 <table class="show_table">
     <tr class='table_header'><td>Product</td><td>Price</td><td>Point</td><td>Quantity</td><td>Total</td></tr>
     {% for product in product_in_cart %}
