--- a/templates/checkout_payment.html
+++ b/templates/checkout_payment.html
@@ -2,6 +2,11 @@
 {% block title %}Checkout: Select Payment{% endblock %}
 
 {% block content %}
+<span id='navigation'>
+    <a href="/profile">{{ username }}</a> > <a href="/cart">Cart </a> > Payment
+</span>
+<br>
+<br>
 <span class="biggest_header">Select Payment</span>
 <span class="big_header">Total: $ {{ total_price }} / {{ total_point }} pts. </span>
 <form id='payment_form' action='/checkout/payment' method="post">
