--- a/templates/backoffice_base.html
+++ b/templates/backoffice_base.html
@@ -36,39 +36,13 @@
             <div id="wrapper">
                 <ul class="ac-menu">
                     <li id="one">
-                        <a href="#one">Menu One</a>
-                        <ul class="sub-menu">
-                            <li><a href="#one">Inner One</a></li>
-                            <li><a href="#one">Inner Two</a></li>
-                            <li><a href="#one">Inner Three</a></li>
-                            <li><a href="#one">Inner Three</a></li>
-                            <li><a href="#one">Inner Three</a></li>
-                        </ul>
+                        <a href="#one">Stock Management</a>
                     </li>
                     <li id="two">
                         <a href="#two">Menu Two</a>
-                        <ul class="sub-menu">
-                            <li><a href="#one">Inner One</a></li>
-                            <li><a href="#one">Inner Two</a></li>
-                            <li><a href="#one">Inner Three</a></li>
-                        </ul>
                     </li>
                     <li id="three">
                         <a href="#three">Menu Three</a>
-                        <ul class="sub-menu">
-                            <li><a href="#three">Inner One</a></li>
-                            <li><a href="#three">Inner Two</a></li>
-                            <li><a href="#three">Inner Three</a></li>
-                        </ul>
-                    </li>
-                    <li id="four">
-                        <a href="#four">Menu Four</a>
-                        <ul class="sub-menu">
-                            <li><a href="#three">Inner One</a></li>
-                            <li><a href="#three">Inner Two</a></li>
-                            <li><a href="#three">Inner Three</a></li>
-                        </ul>
-                    </li>
                 </ul>
             </div><!--end accordian-->
             </div><!--end wrapper-->
