--- a/media/css/backoffice_main.css
+++ b/media/css/backoffice_main.css
@@ -24,25 +24,40 @@
     float:left;
     width: 80%;
     min-height:500px;
-    padding-left:10px;
-    padding-top:10px;
+    padding-left:5px;
+    padding-right:5px ;
     display: block;
+    background-color: rgba(255, 255, 255, 0.8);
+    border: 1px solid #5571ff;
+    -webkit-border-radius: 4px;
+    -moz-border-radius: 4px;
+    -moz-background-clip: padding;
+    -webkit-background-clip: padding-box;
+    background-clip: padding-box;
+    -webkit-box-shadow: inset 0px 1px 0px 0px rgba(255,255,255, .1), 0px 1px 0px 0px rgba(0,0,0, .1);
+    -moz-box-shadow: inset 0px 1px 0px 0px rgba(255,255,255, .1), 0px 1px 0px 0px rgba(0,0,0, .1);
+    box-shadow: inset 0px 1px 0px 0px rgba(255,255,255, .1), 0px 1px 0px 0px rgba(0,0,0, .1);
 }
 
 #header{
-    margin-top:10px;
-    left:15px;
+    margin: 0 auto;
     min-height: 80px;
     top:10px;
     position:relative;
-    background-image: -webkit-gradient(
-        linear,
-        left bottom,
-        left top,
-        color-stop(0.3, rgb(0,40,110)),
-        color-stop(0.97, rgb(0,35,51))
-    );
     display: block;
+    background: #343435;
+    background: -moz-linear-gradient(top, #343435 1%, #4a4a4a 100%);
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(1%,#343435), color-stop(100%,#4a4a4a));
+    background: -webkit-linear-gradient(top, #343435 1%,#4a4a4a 100%);
+    background: -o-linear-gradient(top, #343435 1%,#4a4a4a 100%);
+    background: -ms-linear-gradient(top, #343435 1%,#4a4a4a 100%);
+    background: linear-gradient(top, #343435 1%,#4a4a4a 100%);
+
+    -webkit-box-shadow: inset 0px 1px 0px 0px rgba(255,255,255, .1), 0px 1px 0px 0px rgba(0,0,0, .1);
+    -moz-box-shadow: inset 0px 1px 0px 0px rgba(255,255,255, .1), 0px 1px 0px 0px rgba(0,0,0, .1);
+    box-shadow: inset 0px 1px 0px 0px rgba(255,255,255, .1), 0px 1px 0px 0px rgba(0,0,0, .1);
+
+    clear: both;
 }
 #header-left {
     float:left;
@@ -158,4 +173,15 @@ a.menubox:hover,a.menubox:active
     content: ".";
     clear: both;
     height: 0;
+}
+
+body{
+    font-family: "Trebuchet MS";
+    background-image: url('/media/images/bg2.jpg');
+    background-repeat:repeat;
+    background-attachment:fixed;
+}
+
+#logo-image{
+    margin-left: 10px;
 }
