--- a/templates/edit_product.html
+++ b/templates/edit_product.html
@@ -1,3 +1,38 @@
+{% extends "backoffice_base.html" %}
+{% block title %}Edit Product{% endblock %}
+
+<html>
+<head>
+    <title>edit product: {{ pid }}</title>
+</head>
+
+{% block content %}
+<body>
+<form action="/product/{{ pid }}/edit" method="POST">
+    {% csrf_token %}
+    <p>edit product: {{ cid }}</p>
+    <p>name: {{ form.name }}</p>
+    <p>price: {{ form.price }} $</p>
+    <p>point: {{ form.point }} pt.</p>
+    <p>category: {{ form.category }}</p>
+    <p>description: </p>
+    <p>{{ form.description }}</p>
+    <p>supplier: {{ form.supplier }}</p>
+    <img src="/media/{{ product.image }}" />
+    <p>{{ form.image }}</p>
+    <p>amount: {{ form.amount }}</p>
+    <p>order supply status: {{ form.orderSupStatus }}</p>
+    <input type="submit" value="submit" />
+</form>
+
+<div>
+    <a href="/product/{{ pid }}/delete">Delete this product</a>
+</div>
+</body>
+</html>
+
+{% endblock %}
+<!--
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
         "http://www.w3.org/TR/html4/loose.dtd">
 <html>
