--- a/templates/managecatalog.html
+++ b/templates/managecatalog.html
@@ -1,5 +1,58 @@
+{% extends "backoffice_base.html" %}
+
+{% block title %}Catalog Management{% endblock %}
+
+<head>
+    <title>Catalog Management</title>
+    <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
+    <style>
+        body{
+            font-family:Arial,Helvetica,sans-serif;
+            font-size: 12px;
+        }
+    </style>
+</head>
+<body>
+
+{% block userblock %}
+<div id='empDetails'>
+    Welcome!<br>
+    Mr.{{ fullname }}<br>
+    {% if manager and clerk %}
+    {{ manager }}, {{ clerk }}<br>
+    {% else %}
+    {% if manager %} {{ manager }}<br>{% endif %}
+    {% if clerk %}{{ clerk }}<br>{% endif %}
+    {% endif %}
+</div>
+{% endblock %}
+
+{% block content %}
+<body>
+<h1>Back Office : Catalog Management</h1>
 
 
+<div> <!-- Category Here Jaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa -->
+    <a href="/category/new">Add new Category</a><br>
+    {% for category in categories %}
+    <a href="/backoffice/managecatalog/{{ category.id }}">
+        {{ category }}....<a href="/category/{{ category.id }}/edit">Edit</a></a><br>
+    {% endfor %}
+    <a href="/backoffice/managecatalog">Show all products</a>
+</div>
+
+
+
+<div><!-- Product List Jaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa -->
+    <a href="/product/new">Add New Product</a><br>
+    {% for product in product_list %}
+    {{ product.name }} / {{ product.category }}    <a href="/product/{{ product.id }}/edit">Edit</a><br>
+    {% endfor %}
+</div>
+
+</body>
+
+{% endblock %}
 <!--
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
