Add Clear Cart!

--- a/templates/view_cart.html
+++ b/templates/view_cart.html
@@ -34,4 +34,8 @@ Total: ${{ total_price }}/{{ total_point }}pts.
 <div class="float_left">
     <a href="/">Add some more</a>
 </div>
+
+<div class="float_left">
+    <a href="/clear_cart">Clear Cart</a>
+</div>
 {% endblock %}
