Update UI -edit search2222

--- a/templates/catalog_view.html
+++ b/templates/catalog_view.html
@@ -3,6 +3,13 @@
 {% block title %}Welcome to E-Comerce Site{% endblock %}
 
 {% block content %}
-<!-- TODO: which product does show in index page ? -->
-เอาสินค้ามาโชว์ยังไงดีว้า
+<span class='biggest_header'>Welcome to E-Commerce Website.</span><br>
+{% for product in product_list %}
+    <ul class="product_block">
+        <a href="/product/{{ product.id }}/"><img src="/media/{{ product.image }}" height="60" /></a><br>
+        <span class="product_name">{{ product.name }}</span>
+        <br><span class="product_price"> Price : {{ product.price }}
+            <br> Point : {{ product.point }}</span>
+    </ul>
+{% endfor %}
 {% endblock %}
