--- a/media/css/main.css
+++ b/media/css/main.css
@@ -87,9 +87,8 @@
 }
 #search_form {
     position:absolute;
-    display:inline;
-    margin-top:20px;
-    margin-left:10px;
+    top:20px;
+    left:450px;
     width:100%;
 }
 
@@ -121,6 +120,119 @@
     position:relative;
     left:20px;
 }
+
+
+.product_block{
+    position:relative;
+    width:20%;
+    margin:10px;
+    float:left;
+    font-size: small;
+}
+
+.endfloat {
+    clear: both;
+    display:block;
+}
+
+.big_img {
+    width:250px;
+    float:right;
+    margin-right:20px;
+}
+
+.description_header {
+    font-size: large;
+    font-style: oblique;
+}
+
+#product_name_title {
+    font-size: 25px;
+}
+
+#add_to_cart_zone {
+    clear: both;
+    float:right;
+    margin-right:25px;
+}
+.show_table td{
+    text-align:center;
+    min-width:90px;
+}
+
+.show_table {
+    margin-left:20px;
+    margin-bottom:20px;
+}
+
+.table_header{
+    background-color:black;
+    color:white;
+    background-color:#000099;
+}
+
+.float_left{
+    float:right;
+    margin-right:20px;
+}
+
+
+.biggest_header {
+    font-size:30px;
+}
+
+.big_header {
+    font-size:20px;
+    float:right;
+    margin-right:20px;
+    margin-top:10px;
+}
+
+
+#oldcard,#oldaddress{
+    background-color:white;
+    text-align:center;
+    vertical-align:middle;
+    margin-left: 200px;
+    margin-top:-20px;
+    height:30px;
+    width:170px;
+    border:0px;
+    padding-top:5px;
+    padding-bottom:0px;
+    padding-left:0px;
+}
+
+#id_card_number{
+    width:230px;
+}
+
+#payment_form{
+    margin-left:30px;
+}
+
+#id_ccv {
+    width:40px;
+}
+#ccv_input {
+    display:block;
+    margin-left:100px;
+    margin-top:20px;
+}
+
+#payment_warn_text,#adress_form{
+    margin-left:40px;
+}
+
+#payment_submit {
+    margin-left:120px;
+}
+
+.show_table_oreder_detail td{
+    min-width: 70px;
+    text-align: right;
+}
+
 a.menubox:link,a.menubox:visited
 {
     margin: 2px;
