--- a/templates/base.html
+++ b/templates/base.html
@@ -26,9 +26,9 @@
                 {% if not user.is_authenticated %}
                     <a href='/login'>Login</a> | <a href='/register'>Register</a>
                 {% else %}
-                    Welcome, {{ user.username }}<br>
-                    {{ user.get_profile.point }} pts.
-                    <a href="/cart"><img src="/media/img/cart.jpg" height="15px" /></a> | <a href='/logout'>Logout</a>
+                    Welcome, <a href="/profile/">{{ user.username }}</a><br>
+                    <a href="/cart"><img src="/media/img/cart.jpg" height="15px" /></a>
+                    {{ user.get_profile.point }} pts. | <a href='/logout'>Logout</a>
                 {% endif %}
             {% endblock %}
         </span>
@@ -48,12 +48,14 @@
                 <li id="one">
                     <a href="/">Home</a>
                 </li>
+                {% if user.is_authenticated %}
                 <li id="two">
                     <a href="/cart">Cart</a>
                 </li>
                 <li id="three">
                     <a href="/history">Order</a>
                 </li>
+                {% endif %}
                 <li id="four">
                     <a href="#four">Shop</a>
                     <ul class="sub-menu">
