--- a/templates/edit_profile.html
+++ b/templates/edit_profile.html
@@ -1,54 +1,48 @@
 {% extends 'base.html' %}
 {% block title %}Edit Profile{% endblock %}
 {% block content %}
-<script language="JavaScript" src="/media/javascript/gen_validatorv4.js"
-        type="text/javascript"></script>
+<span id='navigation'>
+    <a href="/profile">{{ form.username }}</a> > edit
+</span>
+<br>
 <form id='edit_form' name='edit_form' enctype="multipart/form-data" action="edit" method="post">
     {% csrf_token %}
     <!--{% for field in form %}-->
     <!--{{ field.label_tag }}: {{ field.errors }}<br>-->
     <!--{% endfor %}-->
-    Username : {{ form.username }} <input type="hidden" name="username" value="{{form.username}}" /><br />
-    First name: <input type="text" name="first_name"  value='{{ form.first_name }}' onchange="return "/><br />
-    Last name: <input type="text" name="last_name"  value='{{ form.last_name }}'/><br />
-    Birth Date: <input type="text" name="birth_date"  value='{{ form.birth_date }}' onchange="" />  (now your age is {{ age }} years old.)<br />
-    Sex: <input type="radio" name="sex" {{ form.checked_undefined }} value='0' /> Undefined <input type="radio" name="sex" {{ form.checked_male }} value='1' /> Male  <input type="radio" name="sex" {{ form.checked_female }} value='2' /> Female <br />
-    Tel: <input type="text" name="tel" value='{{ form.tel }}' /> <br />
-    E-Mail: <input type="text" name="email" value='{{ form.email }}' /> <br />
-    Credit Card No.: <input type="text" name="creditcard" value='{{ form.creditcard }}' /> <br />
-
-    <!-- Change Address -->
-    Address 1: <input type="text" name="first_line" value='{{ form.first_line }}' /> <br />
-    Address 2: <input type="text" name="second_line" value='{{ form.second_line }}' /> <br />
-    Town: <input type="text" name="town" value='{{ form.town }}' /> <br />
-    Country: <input type="text" name="country" value='{{ form.country }}' /> <br />
-    Zipcode: <input type="text" name="zip_code" value='{{ form.zip_code }}' /> <br />
-
+    <input type="hidden" name="username"  value='{{ form.username }}' />
+    <b>General:</b><br>
+    <span class='menu2'>
+        First name: <input type="text" name="first_name"  value='{{ form.first_name }}' onchange="return "/><br />
+        Last name: <input type="text" name="last_name"  value='{{ form.last_name }}'/><br />
+        Birth Date: <input type="text" name="birth_date"  value='{{ form.birth_date }}' onchange="" />  (now your age is {{ form.age }} years old.)<br />
+        Sex: <input type="radio" name="sex" {{ form.checked_undefined }} value='0' /> Undefined <input type="radio" name="sex" {{ form.checked_male }} value='1' /> Male  <input type="radio" name="sex" {{ form.checked_female }} value='2' /> Female <br />
+        Tel: <input type="text" name="tel" value='{{ form.tel }}' /> <br />
+        E-Mail: <input type="text" name="email" value='{{ form.email }}' /> <br />
+    </span>
+    <br>
+    <b>Address:</b><br>
+    <span class='menu2'>
+        <!-- Change Address -->
+        Address 1: <input type="text" name="first_line" value='{{ form.first_line }}' /> <br />
+        Address 2: <input type="text" name="second_line" value='{{ form.second_line }}' /> <br />
+        Town: <input type="text" name="town" value='{{ form.town }}' /> <br />
+        Country: <input type="text" name="country" value='{{ form.country }}' /> <br />
+        Zipcode: <input type="text" name="zip_code" value='{{ form.zip_code }}' /> <br />
+    </span>
+    <br>
+    <b>Payment Method:</b><br>
+    <span class='menu2'>
+        Credit Card No.: <input type="text" name="creditcard" value='{{ form.creditcard }}' /> <br />
+    </span>
+    <br>
     <!--- Change Password --->
-    <input type="checkbox" name="is_change_password" /> Change Password <br />
-    Old Password : <input type="password" name="old_password" /> <br />
-    New Password : <input type="password" name="new_password" /> <br />
-    Confirm New Password : <input type="password" name="confirm_password" /> <br />
+    <b>Change Password <input type="checkbox" name="is_change_password" /><br>
+    </b><span class='menu2'>
+        Old Password : <input type="password" name="old_password" /> <br />
+        New Password : <input type="password" name="new_password" /> <br />
+        Confirm New Password : <input type="password" name="confirm_password" /> <br />
+    </span>
     <input type="submit" value="Submit" />
 </form>
-<script language="JavaScript" type="text/javascript">
-    var frmvalidator  = new Validator("edit_form");
-
-    frmvalidator.addValidation("FirstName","req");
-    frmvalidator.addValidation("FirstName","maxlen=20");
-    frmvalidator.addValidation("FirstName","alpha");
-
-    frmvalidator.addValidation("LastName","req");
-    frmvalidator.addValidation("LastName","maxlen=20","Max length is 20");
-
-    frmvalidator.addValidation("Email","maxlen=50");
-    frmvalidator.addValidation("Email","req");
-    frmvalidator.addValidation("Email","email");
-
-    frmvalidator.addValidation("Phone","maxlen=50");
-    frmvalidator.addValidation("Phone","numeric");
-
-    frmvalidator.addValidation("Address","maxlen=50");
-    frmvalidator.addValidation("Country","dontselect=000");
-</script>
 {% endblock %}
