--- a/templates/managestock.html
+++ b/templates/managestock.html
@@ -14,17 +14,25 @@
 </head>
 <body>
 {% block userblock %}
-<div id='empDetails'>
-    Welcome!<br>
-    Mr.{{ fullname }}<br>
-    {% if manager and clerk %}
-    {{ manager }}, {{ clerk }}<br>
-    {% else %}
-    {% if manager %} {{ manager }}<br>{% endif %}
-    {% if clerk %}{{ clerk }}<br>{% endif %}
-    {% endif %}
-
-</div>
+    </div>
+        <span id='user_block'>
+                {% if not user.is_authenticated %}
+                <a href='/login'>Login</a>
+                {% else %}
+                 <div id='empDetails'>
+                    Welcome!<br>
+                    Mr.{{ fullname }}<br>
+                    {% if manager and clerk %}
+                    {{ manager }}, {{ clerk }}<br>
+                    {% else %}
+                    {% if manager %} {{ manager }}<br>{% endif %}
+                    {% if clerk %}{{ clerk }}<br>{% endif %}
+                    {% endif %}
+                 </div>
+                <a href='/logout'>Logout</a>
+                {% endif %}
+        </span>
+    </div>
 {% endblock %}
 
 {% block content %}
