--- a/media/css/backoffice_main.css
+++ b/media/css/backoffice_main.css
@@ -8,12 +8,13 @@
 }
 
 #sidemenu {
-    margin-top:20px;
-    margin-left:0px;
+    margin-top:0.5px;
+    margin-left:8.77%;
     float:left;
     width:17%;
     height: 100%;
     min-height: 100px;
+
 }
 
 #middle {
@@ -21,15 +22,16 @@
 }
 
 #content {
-    float:left;
-    width: 80%;
+    margin-top:1.5%;
+    margin-left:23%;
+    width: 64%;
     min-height:500px;
     padding-left:5px;
     padding-right:5px ;
     display: block;
     background-color: rgba(255, 255, 255, 0.8);
-    border: 1px solid #5571ff;
-    -webkit-border-radius: 4px;
+    border: 2px solid #5571ff;
+    -webkit-border-radius: 8px;
     -moz-border-radius: 4px;
     -moz-background-clip: padding;
     -webkit-background-clip: padding-box;
@@ -45,6 +47,7 @@
     top:10px;
     position:relative;
     display: block;
+
     background: #343435;
     background: -moz-linear-gradient(top, #343435 1%, #4a4a4a 100%);
     background: -webkit-gradient(linear, left top, left bottom, color-stop(1%,#343435), color-stop(100%,#4a4a4a));
@@ -52,7 +55,7 @@
     background: -o-linear-gradient(top, #343435 1%,#4a4a4a 100%);
     background: -ms-linear-gradient(top, #343435 1%,#4a4a4a 100%);
     background: linear-gradient(top, #343435 1%,#4a4a4a 100%);
-
+    -webkit-border-radius: 8px;
     -webkit-box-shadow: inset 0px 1px 0px 0px rgba(255,255,255, .1), 0px 1px 0px 0px rgba(0,0,0, .1);
     -moz-box-shadow: inset 0px 1px 0px 0px rgba(255,255,255, .1), 0px 1px 0px 0px rgba(0,0,0, .1);
     box-shadow: inset 0px 1px 0px 0px rgba(255,255,255, .1), 0px 1px 0px 0px rgba(0,0,0, .1);
@@ -99,7 +102,7 @@
 #user_block {
     position:absolute;
     right:30px;
-    top:10px;
+    top:15px;
     display:inline;
     color:white;
 }
