--- a/templates/edit_category.html
+++ b/templates/edit_category.html
@@ -1,20 +1,26 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
-        "http://www.w3.org/TR/html4/loose.dtd">
-<html>
+{% extends "backoffice_base.html" %}
+{% block title %}Edit Category{% endblock %}
+
+
+
 <head>
     <title>edit category: {{ cid }}</title>
 </head>
+{% block content %}
+
 <body>
-    {% if form_error_msg %}
-        {{ form_error_msg }}
-    {% endif %}
-    <form action="/category/{{ cid }}/edit" method="POST">
-        {% csrf_token %}
-        <p>edit category: {{ cid }}</p>
-        <p>name: {{ form.name }}</p>
-        <p>description:</p>
-        <p>{{ form.description }}</p>
-        <input type="submit" value="submit" />
-    </form>
+{% if form_error_msg %}
+{{ form_error_msg }}
+{% endif %}
+<form action="/category/{{ cid }}/edit" method="POST">
+    {% csrf_token %}
+    <p>edit category: {{ cid }}</p>
+    <p>name: {{ form.name }}</p>
+    <p>description:</p>
+    <p>{{ form.description }}</p>
+    <input type="submit" value="submit" />
+</form>
 </body>
-</html>
+{% endblock %}
+
+
