--- a/templates/managecatalog.html
+++ b/templates/managecatalog.html
@@ -12,18 +12,27 @@
         }
     </style>
 </head>
-<body>
+</body>
 
 {% block userblock %}
-<div id='empDetails'>
-    Welcome!<br>
-    Mr.{{ fullname }}<br>
-    {% if manager and clerk %}
-    {{ manager }}, {{ clerk }}<br>
-    {% else %}
-    {% if manager %} {{ manager }}<br>{% endif %}
-    {% if clerk %}{{ clerk }}<br>{% endif %}
-    {% endif %}
+</div>
+        <span id='user_block'>
+                {% if not user.is_authenticated %}
+                <a href='/login'>Login</a>
+                {% else %}
+                 <div id='empDetails'>
+                     Welcome!<br>
+                     Mr.{{ fullname }}<br>
+                     {% if manager and clerk %}
+                     {{ manager }}, {{ clerk }}<br>
+                     {% else %}
+                     {% if manager %} {{ manager }}<br>{% endif %}
+                     {% if clerk %}{{ clerk }}<br>{% endif %}
+                     {% endif %}
+                 </div>
+                <a href='/logout'>Logout</a>
+                {% endif %}
+        </span>
 </div>
 {% endblock %}
 
@@ -53,6 +62,7 @@
 </body>
 
 {% endblock %}
+
 <!--
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
@@ -91,8 +101,8 @@
     {% endif %}
 </div>
 
-    <div> <!-- Category Here Jaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa -->
-        <a href="/category/new">Add new Category</a><br>
+<div> <!-- Category Here Jaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa -->
+<!--        <a href="/category/new">Add new Category</a><br>
         {% for category in categories %}
             <a href="/backoffice/managecatalog/{{ category.id }}">
             {{ category }}....<a href="/category/{{ category.id }}/edit">Edit</a></a><br>
@@ -101,13 +111,13 @@
     </div>
 
     <div><!-- Product List Jaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa -->
-        <a href="/product/new">Add New Product</a><br>
+<!--        <a href="/product/new">Add New Product</a><br>
         {% for product in product_list %}
             {{ product.name }} / {{ product.category }}    <a href="/product/{{ product.id }}/edit">Edit</a><br>
 
         {% endfor %}
-    </div>
+</div>
 
 </body>
 </html>
--->
+
