All new design notification system It magically dissolves upward after 3s You just have to see it to feel what it truly defines It just works!!

--- a/media/css/main.css
+++ b/media/css/main.css
@@ -302,6 +302,7 @@ body{
 .messages{
     position: relative;
     border: solid 2px #070;
+    font-size: 20px;
     background-color: #FFF;
     margin-top: 15px;
     padding-top:10px;
