--- a/media/css/backoffice_main.css
+++ b/media/css/backoffice_main.css
@@ -1,30 +1,33 @@
 #container {
     position:relative;
-    top:10px;
     width:1024px;
     margin:0 auto;
+    height: auto;
     background-attachment:scroll;
 
 }
 
 #sidemenu {
-    margin-top:0.5px;
-    margin-left:8.77%;
+    margin-top:0px;
+    margin-left:0px;
     float:left;
     width:17%;
     height: 100%;
     min-height: 100px;
-
+    position: relative;
 }
 
 #middle {
     display: block;
+    position: relative;
+    height: auto;
 }
 
 #content {
-    margin-top:1.5%;
-    margin-left:23%;
-    width: 64%;
+    float:right;
+    margin-left:0px;
+    position: relative;
+    width: 81%;
     min-height:500px;
     padding-left:5px;
     padding-right:5px ;
@@ -44,7 +47,6 @@
 #header{
     margin: 0 auto;
     min-height: 80px;
-    top:10px;
     position:relative;
     display: block;
 
@@ -100,11 +102,12 @@
 }
 
 #user_block {
-    position:absolute;
-    right:30px;
-    top:15px;
-    display:inline;
+    position:relative;
+    display:block;
     color:white;
+    margin-top: 2px;
+    margin-right: 10px;
+    float:right;
 }
 
 
@@ -187,4 +190,10 @@ body{
 
 #logo-image{
     margin-left: 10px;
+    width: 10%;
+    float:left;
+}
+
+a:visited{
+    color:#ffffff;
 }
