--- a/templates/add_category.html
+++ b/templates/add_category.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends "backoffice_base.html" %}
 {% block title %}Add category{% endblock %}
 {% block content %}
     {% if success_msg %}
