--- a/templates/backoffice_base.html
+++ b/templates/backoffice_base.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <div id="container">
-    <div id="header">
+    <div id="header" class="clearfix">
     <div id="header-left">
         <div id="logo" class="clearfix">E-Commerce Store</div>
         <p id="header-left-right">Back Office</p>
@@ -18,10 +18,19 @@
         <span id='user_block'>
             {% block userblock %}
                 {% if not user.is_authenticated %}
-                <a href='/login'>Login</a>
+                    <a href='/login'>Login</a>
                 {% else %}
-                Hello, {{ user.username }}
-                <a href='/logout'>Logout</a>
+                    <div id='empDetails'>
+                        Welcome!<br>
+                        Mr.{{ fullname }}<br>
+                        {% if manager and clerk %}
+                            {{ manager }}, {{ clerk }}<br>
+                        {% else %}
+                            {% if manager %} {{ manager }}<br>{% endif %}
+                            {% if clerk %}{{ clerk }}<br>{% endif %}
+                        {% endif %}
+                    </div>
+                    <a href='/logout'>Logout</a>
                 {% endif %}
             {% endblock %}
         </span>
@@ -56,6 +65,7 @@
         {% endblock %}
     </div>
 </div>
+<div class="clearfix"></div>
 </div>
 </body>
 </html>
