--- a/templates/managestock.html
+++ b/templates/managestock.html
@@ -2,41 +2,8 @@
 
 {% block title %}Stock Management{% endblock %}
 
-<head>
-    <title>Stock Management</title>
-    <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
-    <style>
-        body{
-            font-family:Arial,Helvetica,sans-serif;
-            font-size: 12px;
-        }
-    </style>
-</head>
-<body>
-{% block userblock %}
-    </div>
-        <span id='user_block'>
-                {% if not user.is_authenticated %}
-                <a href='/login'>Login</a>
-                {% else %}
-                 <div id='empDetails'>
-                    Welcome!<br>
-                    Mr.{{ fullname }}<br>
-                    {% if manager and clerk %}
-                    {{ manager }}, {{ clerk }}<br>
-                    {% else %}
-                    {% if manager %} {{ manager }}<br>{% endif %}
-                    {% if clerk %}{{ clerk }}<br>{% endif %}
-                    {% endif %}
-                 </div>
-                <a href='/logout'>Logout</a>
-                {% endif %}
-        </span>
-    </div>
-{% endblock %}
-
 {% block content %}
-<h1>Back Office : Stock Management</h1>
+<h1>Stock Management</h1>
 
 
 <div>
@@ -61,8 +28,6 @@
     </div>
     {% endfor %}
 </div>
-
-</body>
 {% endblock %}
 <!--
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
