--- a/media/css/backoffice_main.css
+++ b/media/css/backoffice_main.css
@@ -1,33 +1,29 @@
 #container {
     position:relative;
+    top:10px;
     width:1024px;
     margin:0 auto;
-    height: auto;
     background-attachment:scroll;
 
 }
 
 #sidemenu {
-    margin-top:0px;
-    margin-left:0px;
+    margin-top:0.5px;
+    margin-left:8.77%;
     float:left;
     width:17%;
     height: 100%;
     min-height: 100px;
-    position: relative;
 }
 
 #middle {
     display: block;
-    position: relative;
-    height: auto;
 }
 
 #content {
-    float:right;
-    margin-left:0px;
-    position: relative;
-    width: 81%;
+    margin-top:1.5%;
+    margin-left:23%;
+    width: 64%;
     min-height:500px;
     padding-left:5px;
     padding-right:5px ;
@@ -47,9 +43,9 @@
 #header{
     margin: 0 auto;
     min-height: 80px;
+    top:10px;
     position:relative;
     display: block;
-
     background: #343435;
     background: -moz-linear-gradient(top, #343435 1%, #4a4a4a 100%);
     background: -webkit-gradient(linear, left top, left bottom, color-stop(1%,#343435), color-stop(100%,#4a4a4a));
@@ -67,6 +63,7 @@
 #header-left {
     float:left;
     margin-left: 10px;
+    margin-top:10px;
     display: block;
 }
 #header-left-right {
@@ -102,12 +99,11 @@
 }
 
 #user_block {
-    position:relative;
-    display:block;
+    position:absolute;
+    right:30px;
+    top:15px;
+    display:inline;
     color:white;
-    margin-top: 2px;
-    margin-right: 10px;
-    float:right;
 }
 
 
@@ -163,7 +159,7 @@ a.menubox:hover,a.menubox:active
     text-align:left;
     padding-top:5px;
     padding-bottom:4px;
-    background-color: #9797ff;
+    background-color:#3f3f3f;;
     color:#ffffff;
 }
 #packing tr.alt td
@@ -190,10 +186,4 @@ body{
 
 #logo-image{
     margin-left: 10px;
-    width: 10%;
-    float:left;
-}
-
-a:visited{
-    color:#ffffff;
 }
