--- a/media/css/style.css
+++ b/media/css/style.css
@@ -18,7 +18,9 @@
 	cursor: default;
 	display: none;
 }
-
+.tn-box + .tn-box {
+    margin-top: 63px;
+}
 .tn-box p {
 	font-weight: bold;
 	font-size: 16px;
