--- a/media/css/main.css
+++ b/media/css/main.css
@@ -8,28 +8,33 @@
 }
 
 #sidemenu {
-    margin-top:1%;
+    margin-top:0px;
+    margin-left:0px;
     float:left;
     width:17%;
     height: 100%;
     min-height: 100px;
+    position: relative;
 }
 
 #middle {
     display: block;
+    position: relative;
+    height: auto;
+    margin-top: 10px;
 }
 
 #content {
-
-    margin-left:16%;
-    width: 83%;
+    float:right;
+    margin-left:0px;
+    position: relative;
+    width: 81%;
     min-height:500px;
     padding-left:5px;
     padding-right:5px ;
-    margin-top:10px;
     display: block;
     background-color: rgba(255, 255, 255, 0.8);
-    border: 1px solid #5571ff;
+    border: 2px solid #5571ff;
     -webkit-border-radius: 8px;
     -moz-border-radius: 4px;
     -moz-background-clip: padding;
@@ -43,7 +48,6 @@
 #header{
     margin: 0 auto;
     min-height: 80px;
-    top:10px;
     position:relative;
     display: block;
     background: #343435;
@@ -62,7 +66,6 @@
 #header-left {
     float:left;
     margin-left: 10px;
-    margin-top:10px;
     display: block;
 }
 #header-left-right {
@@ -86,10 +89,8 @@
 
 }
 #search_form {
-    position:absolute;
-    top:40px;
-    left:450px;
-    width:100%;
+    position:relative;
+    top:20px;
 }
 
 #search_form #id_q{
@@ -97,11 +98,12 @@
 }
 
 #user_block {
-    position:absolute;
-    right:30px;
-    top:10px;
-    display:inline;
+    position:relative;
+    display:block;
     color:white;
+    margin-top: 2px;
+    margin-right: 10px;
+    float:right;
 }
 
 
@@ -302,7 +304,9 @@ body{
 }
 
 #logo-image{
-    margin-left: 10px;
+    width: 10%;
+    float:left;
+    position: relative;
 }
 
 .messages{
