--- a/templates/managecatalog.html
+++ b/templates/managecatalog.html
@@ -6,14 +6,13 @@
 <body>
 <h1>Back Office : Catalog Management</h1>
 
-
 <div> <!-- Category Here Jaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa -->
-    <a href="/category/new">Add new Category</a><br>
-    {% for category in categories %}
-    <a href="/backoffice/managecatalog/{{ category.id }}">
-        {{ category }}....<a href="/category/{{ category.id }}/edit">Edit</a></a><br>
-    {% endfor %}
-    <a href="/backoffice/managecatalog">Show all products</a>
+<a href="/category/new">Add new Category</a><br>
+{% for category in categories %}
+<a href="/backoffice/managecatalog/{{ category.id }}">
+    {{ category }}....<a href="/category/{{ category.id }}/edit">Edit</a></a><br>
+{% endfor %}
+<a href="/backoffice/managecatalog">Show all products</a>
 </div>
 
 
@@ -66,7 +65,7 @@
 </div>
 
 <div> <!-- Category Here Jaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa -->
-<!--        <a href="/category/new">Add new Category</a><br>
+      <a href="/category/new">Add new Category</a><br>
         {% for category in categories %}
             <a href="/backoffice/managecatalog/{{ category.id }}">
             {{ category }}....<a href="/category/{{ category.id }}/edit">Edit</a></a><br>
@@ -75,7 +74,7 @@
     </div>
 
     <div><!-- Product List Jaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa -->
-<!--        <a href="/product/new">Add New Product</a><br>
+       <a href="/product/new">Add New Product</a><br>
         {% for product in product_list %}
             {{ product.name }} / {{ product.category }}    <a href="/product/{{ product.id }}/edit">Edit</a><br>
 
@@ -84,4 +83,3 @@
 
 </body>
 </html>
-
