--- a/media/css/backoffice_main.css
+++ b/media/css/backoffice_main.css
@@ -34,7 +34,7 @@
     padding-right:5px ;
     display: block;
     background-color: rgba(255, 255, 255, 0.8);
-    border: 2px solid #5571ff;
+    border: 2px solid #3f3f3f;
     -webkit-border-radius: 8px;
     -moz-border-radius: 4px;
     -moz-background-clip: padding;
@@ -164,7 +164,7 @@ a.menubox:hover,a.menubox:active
     text-align:left;
     padding-top:5px;
     padding-bottom:4px;
-    background-color: #9797ff;
+    background-color:#3f3f3f;
     color:#ffffff;
 }
 #packing tr.alt td
