--- a/media/css/main.css
+++ b/media/css/main.css
@@ -34,7 +34,7 @@
     padding-right:5px ;
     display: block;
     background-color: rgba(255, 255, 255, 0.8);
-    border: 2px solid #5571ff;
+    border: 2px solid #3f3f3f;
     -webkit-border-radius: 8px;
     -moz-border-radius: 4px;
     -moz-background-clip: padding;
